# SDR

./: .gitignore  README.md
Coeficientes_Filtros/: FIR_Orden100_Hamming_Fc100Hz_Fs1000Hz.txt  FIR_Orden10_Hamming_Fc8000Hz_Fs44100Hz.txt  FIR_Orden20_Hamming_Fc100Hz_Fs1000Hz.txt  FIR_Orden20_Hamming_Fc8000Hz_Fs44100Hz.txt  FIR_Orden50_Hamming_Fc1000Hz_Fs10000Hz.txt  FIR_Orden50_Hamming_Fc100Hz_Fs1000Hz.txt
coeficientes_filtros/: FIR_Orden100_Hamming_Fc1000Hz_Fs10000Hz.txt  FIR_Orden10_Hamming_Fc1000Hz_Fs10000Hz.txt  FIR_Orden80_Hamming_Fc1000Hz_Fs10000Hz.txt
etc/: git.pull.force.txt  github_access_token.txt  hostfile.q  hostfile.s  hosts  motd.old  resolv.conf
gnuradio/: clusterdemo.grc  clusterdemo.py  clusterdemo_flotante.grc  clusterdemo_test_freq.grc  clusterdemo_test_freq.py  pruebas_filtro_cluster.grc  pruebas_filtro_cluster.py  pruebas_filtro_log.grc
gnuradio/COPIA-gr-customModule/: CMakeLists.txt
gnuradio/gr-customModule/python/customModule/bindings/: CMakeLists.txt  escalar_flotante_cpp_python.cc  failed_conversions.txt  filtro_FIR_cluster_log_python.cc  filtro_FIR_cluster_python.cc  filtro_FIR_cpp_python.cc  hello_mpi_gnuradio_python.cc
gnuradio/gr-customModule/python/customModule/bindings/docstrings/: filtro_FIR_3polos_cpp_pydoc_template.h  hello_mpi_gnuradio_pydoc_template.h  multDivSelect_pydoc_template.h
lib/collatz/: collatz  (+5 more)
logs_filtro/: log_Hamming_fs44,1khz_Ord10_1nodos_p1.csv  log_Hamming_fs44,1khz_Ord10_2nodos_p1.csv
normal/: submit.sh
scripts/: bupGNURadio.sh  ccheck.sh  ccp.sh  cexec.sh  cinstall_step00.sh  cinstall_step01.sh  cinstall_step01_local.sh  cinstall_step02.sh  cinstall_step04.sh  cping.sh  cstress.sh  logTelemetry.sh  nodeTelemetry.sh  ntpd.sync  pwdgen.py  setTelemetry.sh  telemetryCluster.sh
(+707 files in other folders)
